objects/PD_State_Permit__c/PD_State_Permit__c.object-meta.xml
<CustomObject>
    <label>PD State Permit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD State Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>