objects/PD_State_Permit__c/fields/Additional_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Costs__c</fullName>
    <label>Additional Costs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>