objects/PD_State_Permit__c/fields/Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_email__c</fullName>
    <label>Contact email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>