objects/PD_State_Permit__c/fields/Cost_of_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Renewal__c</fullName>
    <label>Cost of Renewal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>