objects/PD_State_Permit__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <label>Expiration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>