objects/PD_State_Permit__c/fields/Expiration_CVI__c.field-meta.xml
<CustomField>
    <fullName>Expiration_CVI__c</fullName>
    <label>Expiration- CVI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>