objects/PD_State_Permit__c/fields/Include__c.field-meta.xml
<CustomField>
    <fullName>Include__c</fullName>
    <label>Include</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>