objects/PD_State_Permit__c/fields/Marking_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Marking_Requirements__c</fullName>
    <label>Marking Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>