objects/PD_State_Permit__c/fields/Permit_Location__c.field-meta.xml
<CustomField>
    <fullName>Permit_Location__c</fullName>
    <label>Permit Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>