objects/PD_State_Permit__c/fields/Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number__c</fullName>
    <label>Permit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>