objects/PD_State_Permit__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>