objects/PD_State_Permit__c/fields/Transportation_Permit__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Permit__c</fullName>
    <label>Transportation Permit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>