objects/PD_State_Permit__c/fields/Type_of_Permit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Permit__c</fullName>
    <label>Type of Permit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>