objects/PD_State_Permit__c/fields/Web_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Web_Capabilities__c</fullName>
    <label>Web Capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>