objects/PD_State_Permit__c/fields/Web_User_Information__c.field-meta.xml
<CustomField>
    <fullName>Web_User_Information__c</fullName>
    <label>Web User Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>